# ddhdg

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  parameters.prm  parameters.prm.template
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
doc/: test1.txt  test2.txt  test3.txt
doc/adimensionalization/: adim.tex
doc/hdg_1d_vs_fvm/: hdg1d_vs_fvm.tex
doc/hdg_formulation/: formulation.tex
examples/: residual.ipynb
include/: adimensionalizer.h  assembling_methods.template.h  boundary_conditions.h  components.h  constants.h  convergence_table.h  ddhdg.h  dof_types.h  einstein_diffusion_model.h  electron_mobility.h  function_tools.h  local_condenser.h  logging_utilities.h  mobility.h  nonlinear_iteration_results.h  np_solver.h  np_solver_parameters.h  permittivity.h  problem.h  recombination_term.h  solver.h  templatized_parameters.h
include/dealii-python-bindings/: cell_accessor_wrapper.h  function_wrapper.h  manifold_wrapper.h  mapping_wrapper.h  point_wrapper.h  quadrature_wrapper.h  tria_accessor_wrapper.h  triangulation_wrapper.h
include/py_interface/: pyddhdg.h  pyddhdg_interface.h
include/pyddhdg/: pyddhdg.h  pyddhdg_interface.h
python_scripts/: constants.py  run_ddhdg.py  test_convergence_table.py
python_scripts/parameter_file/: __init__.py  parameter_file_generator.py
src/: CMakeLists.txt  adimensionalizer.cpp  assembling_methods.cpp  assembling_methods_1d.cpp  assembling_methods_2d.cpp  assembling_methods_3d.cpp  boundary_conditions.cpp  copy_on_trace.cpp  ddhdg.cpp  derivative_quantities.cpp  electron_mobility.cpp  error_estimation.cpp  function_tools.cpp  local_condenser.cpp  nonlinear_iteration_results.cpp  np_solver.cpp  np_solver_parameters.cpp  permittivity.cpp  problem.cpp  project_component.cpp  recombination_term.cpp  solver.cpp  thermodynamic_equilibrium.cpp
src/dealii-python-bindings/: CMakeLists.txt  cell_accessor_wrapper.cc  export_cell_accessor.cc  export_manifold.cc  export_mapping.cc  export_point.cc  export_quadrature.cc  export_tria_accessor.cc  export_triangulation.cc  manifold_wrapper.cc  mapping_wrapper.cc  point_wrapper.cc  quadrature_wrapper.cc  tria_accessor_wrapper.cc  triangulation_wrapper.cc  wrappers.cc
src/py_interface/: CMakeLists.txt  pyddhdg.cpp
src/py_interface/1d/: CMakeLists.txt  pyddhdg1d.cpp
src/py_interface/2d/: CMakeLists.txt  pyddhdg2d.cpp
src/py_interface/3d/: CMakeLists.txt  pyddhdg3d.cpp
src/pyddhdg/: CMakeLists.txt  pyddhdg.cpp  pyddhdg.py  pyddhdg_common.cpp
src/pyddhdg/pyddhdg1d/: CMakeLists.txt  pyddhdg1d.cpp
src/pyddhdg/pyddhdg2d/: CMakeLists.txt  pyddhdg2d.cpp
src/pyddhdg/pyddhdg3d/: CMakeLists.txt  pyddhdg3d.cpp
tests/: CMakeLists.txt  adimensionalizer.cpp  cell_face_tau_computer.cpp  copy_on_trace.cpp  current_equation.cpp  disabling_components.cpp  laplacians.cpp  linear_potential.cpp  local_charge_neutrality.cpp  log_potential.cpp  neumann_boundary_conditions.cpp  project_on_trace.cpp  recombination_terms.cpp  set_component.cpp  solution_transfer.cpp  thermodynamic_equilibrium.cpp
